force-app/main/default/objects/VacancyCandidateAssociation__c/VacancyCandidateAssociation__c.object-meta.xml
<CustomObject>
    <label>Candidate to Vacancy</label>
    <nameField>
        <displayFormat>VC-{0000}</displayFormat>
        <label>VacancyCandidateAssociation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates to Vacancy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>