force-app/main/default/objects/VacancyCandidateAssociation__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR 2</booleanFilter>
        <errorMessage>Please associate only candidates that are under your ownership and are Validated by HR.</errorMessage>
        <filterItems>
            <field>Candidate__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>Candidate__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated by HR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Assign Vacancy</relationshipLabel>
    <relationshipName>VacancyCandidateAssociations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>