force-app/main/default/objects/VacancyCandidateAssociation__c/fields/Candidate_Details__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Details__c</fullName>
    <formula>Candidate__r.FirstName__c + &#39; &#39; +  Candidate__r.LastName__c + &#39; (&#39; +  Candidate__r.Email__c  + &#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Details</label>
    <type>Text</type>
</CustomField>