force-app/main/default/objects/VacancyCandidateAssociation__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <label>Vacancy</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>Vacancy is not In-Process or you are not responsible for this vacancy.</errorMessage>
        <filterItems>
            <field>Vacancy__c.Status__c</field>
            <operation>equals</operation>
            <value>In-Process</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>Vacancy__c.Responsible__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Assign Candidate</relationshipLabel>
    <relationshipName>VacancyCandidateAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>